# REIAnalyst

./: .gitignore  pyproject.toml
new_reports/: error_log.txt  short_term_rentals_research_dec_2024.md  short_term_rentals_summary_dec_2024.csv
newest_reports/: research_report_dec_2024.md  short_term_rentals_data_dec2024.csv  short_term_rentals_insights_report_2025.md  short_term_rentals_trends_dec2024.md  short_term_trends_data_dec_2024.csv
reports/: 2024_December_ShortTermRental_Data.csv  2024_December_ShortTermRental_Report.md  2024_December_ShortTermRental_Trends.md  short_term_rentals_investor_report_2024.md
src/str_research_agent/: crew.py  main.py
src/str_research_agent/config/: agents.yaml  tasks.yaml
str_blog_reports/: 2025_U.S._Short-Term_Rental_Market_Investor_Report.md  2025_short_term_rental_market_analysis.md  citations.md  economic_indicators_growth_projections_2025.csv  short_term_rentals_metrics_2025.csv
