[project]
name = "str_research_agent"
version = "0.1.0"
description = "str-research-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
str_research_agent = "str_research_agent.main:run"
run_crew = "str_research_agent.main:run"
train = "str_research_agent.main:train"
replay = "str_research_agent.main:replay"
test = "str_research_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
